--- a/russian/help/ncc.html
+++ b/russian/help/ncc.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>AMIS User Guide</title>
-    <meta name="dc:title" content="AMIS User Guide" />
+    <meta name="dc:title" content="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086; &#1087;&#1086;&#1083;&#1100;&#1079;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1103; AMIS" />
     <meta name="dc:format" content="Daisy 2.02" />
     <meta name="ncc:charset" content="iso-8859-1" />
     <meta name="ncc:generator" content="SigtunaDAR3 3.0.20" />
