fixed textfile encoding (still have no idea what was wrong) added UID

--- a/afrikaans/help/ncc.html
+++ b/afrikaans/help/ncc.html
@@ -6,6 +6,7 @@
     <title>AMIS Gebruikersgids</title>
     <meta name="dc:title" content="AMIS Gebruikersgids" />
     <meta name="dc:format" content="Daisy 2.02" />
+	<meta name="dc:identifier" content="amis-help-za-afr-20080523"/>
     <meta name="ncc:charset" content="iso-8859-1" />
     <meta name="ncc:generator" content="SigtunaDAR3 3.0.22" />
     <meta name="ncc:tocItems" content="18" />
