--- a/chinese/help/ncc.html
+++ b/chinese/help/ncc.html
@@ -5,6 +5,7 @@
     <title>AMIS Help</title>
     <meta name="dc:title" content="AMIS Help" />
     <meta name="dc:format" content="Daisy 2.02" />
+    <meta name="dc:identifier" content="amis_help_chinese_may07"/>
     <meta name="ncc:charset" content="iso-8859-1" />
     <meta name="ncc:generator" content="SigtunaDAR3 3.0.20" />
     <meta name="ncc:tocItems" content="56" />
