--- a/filipino/help/ncc.html
+++ b/filipino/help/ncc.html
@@ -6,6 +6,7 @@
     <meta name="dc:title" content="AMIS Help" />
     <meta name="dc:format" content="Daisy 2.02" />
     <meta name="ncc:charset" content="iso-8859-1" />
+    <meta name="dc:identifier" content="amis_help_filipino_may07"/>
     <meta name="ncc:generator" content="SigtunaDAR3 3.0.20" />
     <meta name="ncc:tocItems" content="56" />
     <meta name="ncc:pageFront" content="0" />
