--- a/kazakh/help/ncc.html
+++ b/kazakh/help/ncc.html
@@ -6,6 +6,7 @@
     <title>AMIS &#1073;&#1072;&#1171;&#1076;&#1072;&#1088;&#1083;&#1072;&#1084;&#1072;&#1089;&#1099;&#1085; &#1087;&#1072;&#1081;&#1076;&#1072;&#1083;&#1072;&#1085;&#1091;&#1096;&#1099;&#1083;&#1072;&#1088;&#1171;&#1072; &#1085;&#1201;&#1089;&#1179;&#1072;&#1091;&#1083;&#1099;&#1179;</title>
     <meta name="dc:title" content="AMIS &#1073;&#1072;&#1171;&#1076;&#1072;&#1088;&#1083;&#1072;&#1084;&#1072;&#1089;&#1099;&#1085; &#1087;&#1072;&#1081;&#1076;&#1072;&#1083;&#1072;&#1085;&#1091;&#1096;&#1099;&#1083;&#1072;&#1088;&#1171;&#1072; &#1085;&#1201;&#1089;&#1179;&#1072;&#1091;&#1083;&#1099;&#1179;" />
     <meta name="dc:format" content="Daisy 2.02" />
+    <meta name="dc:identifier" content="amis-help-kz-kaz-20080523"/>
     <meta name="ncc:charset" content="iso-8859-1" />
     <meta name="ncc:generator" content="SigtunaDAR3 3.0.22" />
     <meta name="ncc:tocItems" content="18" />
