--- a/mongolian/help/ncc.html
+++ b/mongolian/help/ncc.html
@@ -6,6 +6,7 @@
     <title>AMIS &#1073;&#1091;&#1102;&#1091; &#1052;&#1101;&#1076;&#1101;&#1101;&#1083;&#1101;&#1083;&#1080;&#1081;&#1085; &#1058;&#1091;&#1089;&#1075;&#1072;&#1081; &#1052;&#1072;&#1083;&#1090;&#1080;&#1084;&#1077;&#1076;&#1080;&#1072; &#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1099;&#1085; &#1093;&#1101;&#1088;&#1101;&#1075;&#1083;&#1101;&#1075;&#1095;&#1080;&#1081;&#1085; &#1079;&#1072;&#1072;&#1074;&#1072;&#1088;</title>
     <meta name="dc:title" content="AMIS &#1073;&#1091;&#1102;&#1091; &#1052;&#1101;&#1076;&#1101;&#1101;&#1083;&#1101;&#1083;&#1080;&#1081;&#1085; &#1058;&#1091;&#1089;&#1075;&#1072;&#1081; &#1052;&#1072;&#1083;&#1090;&#1080;&#1084;&#1077;&#1076;&#1080;&#1072; &#1057;&#1080;&#1089;&#1090;&#1077;&#1084;&#1099;&#1085; &#1093;&#1101;&#1088;&#1101;&#1075;&#1083;&#1101;&#1075;&#1095;&#1080;&#1081;&#1085; &#1079;&#1072;&#1072;&#1074;&#1072;&#1088;" />
     <meta name="dc:format" content="Daisy 2.02" />
+    <meta name="dc:identifier" content="amis-help-mn-mon-20080523"/>
     <meta name="ncc:charset" content="iso-8859-1" />
     <meta name="ncc:generator" content="SigtunaDAR3 3.0.22" />
     <meta name="ncc:tocItems" content="18" />
