--- a/spanish/help/ncc.html
+++ b/spanish/help/ncc.html
@@ -6,6 +6,7 @@
     <title>AMIS Libro de Ayuda</title>
     <meta name="dc:title" content="AMIS Libro de Ayuda" />
     <meta name="dc:format" content="Daisy 2.02" />
+    <meta name="dc:identifier" content="amis-help-spanish"/>
     <meta name="ncc:charset" content="iso-8859-1" />
     <meta name="ncc:footnotes" content="0" />
     <meta name="ncc:pageFront" content="0" />
