--- a/chinese/help/amis.html
+++ b/chinese/help/amis.html
@@ -52,7 +52,7 @@
 			</div>
 			<p align="center" id="id_16" xml:lang="en-US">
 				<span class="imggroup" id="id_17">
-					<img src="image1.jpeg" id="rId71" alt="E:\AMIS\amis3_help_unrecorded\img\amis.jpg" />				</span>			</p>
+					<img src="./img/image1.jpeg" id="rId71" alt="E:\AMIS\amis3_help_unrecorded\img\amis.jpg" />				</span>			</p>
 			<p align="center" id="id_18" xml:lang="zh-CN">
 				<span id="id_19" class="sentence">
 					<a href="d202_2.smil#txt_8">AMIS&#x662f;&#x82f1;&#x6587;&#x5355;&#x8bcd;Adaptive Multimedia Information System&#x7684;&#x9996;&#x5b57;&#x6bcd;&#x7ec4;&#x5408;&#xff0c;&#x610f;&#x601d;&#x662f;&#x81ea;&#x9002;&#x7528;&#x591a;&#x5a92;&#x4f53;&#x4fe1;&#x606f;&#x7cfb;&#x7edf;&#x3002;</a>				</span>			</p>
@@ -86,7 +86,7 @@
 			</div>
 			<p align="center" id="id_32" xml:lang="en-US">
 				<span class="imggroup" id="id_33">
-					<img id="rId92" alt="E:\AMIS\amis3_help_unrecorded\img\daisy.jpg" src="image2.jpeg" />				</span>			</p>
+					<img id="rId92" alt="E:\AMIS\amis3_help_unrecorded\img\daisy.jpg" src="./img/image2.jpeg" />				</span>			</p>
 			<p align="center" id="id_34" xml:lang="zh-CN">
 				<span class="sentence" id="id_35">
 					<a href="d202_3.smil#txt_16">DAISY&#x662f;&#x82f1;&#x6587;&#x5355;&#x8bcd;<strong id="id_36">D</strong>igital <strong id="id_37">A</strong>ccessible <strong id="id_38">I</strong>nformation <strong id="id_39">S</strong>Ystem&#x7684;&#x9996;&#x5b57;&#x6bcd;&#x7ec4;&#x5408;&#xff0c;&#x610f;&#x601d;&#x662f;&#x6570;&#x5b57;&#x65e0;&#x969c;&#x788d;&#x4fe1;&#x606f;&#x7cfb;&#x7edf;&#x3002;</a>				</span>
@@ -231,7 +231,7 @@
 			</p>
 			<p align="center" id="id_101" xml:lang="en-US">
 				<span class="imggroup" id="id_102">
-					<img src="image3.jpeg" id="rId113" alt="E:\AMIS\amis3_help_unrecorded\img\amis-default-view.jpg" />				</span>			</p>
+					<img src="./img/image3.jpeg" id="rId113" alt="E:\AMIS\amis3_help_unrecorded\img\amis-default-view.jpg" />				</span>			</p>
 			<p align="center" id="id_103" xml:lang="zh-CN">
 				<span class="sentence" id="id_104">
 					<a href="d202_6.smil#txt_42">
@@ -246,7 +246,7 @@
 			</p>
 			<p align="center" id="id_111" xml:lang="en-US">
 				<span class="imggroup" id="id_112">
-					<img src="image4.jpeg" alt="E:\AMIS\amis3_help_unrecorded\img\amis-default-toolbar.jpg" id="rId124" />				</span>			</p>
+					<img src="./img/image4.jpeg" alt="E:\AMIS\amis3_help_unrecorded\img\amis-default-toolbar.jpg" id="rId124" />				</span>			</p>
 			<p align="center" id="id_113" xml:lang="zh-CN">
 				<span class="sentence" id="id_114">
 					<a href="d202_6.smil#txt_44">
@@ -268,7 +268,7 @@
 			</p>
 			<p align="center" id="id_122" xml:lang="en-US">
 				<span class="imggroup" id="id_123">
-					<img id="rId135" src="image5.jpeg" alt="E:\AMIS\amis3_help_unrecorded\img\amis-nav.jpg" />				</span>			</p>
+					<img id="rId135" src="./img/image5.jpeg" alt="E:\AMIS\amis3_help_unrecorded\img\amis-nav.jpg" />				</span>			</p>
 			<p align="center" id="id_124" xml:lang="zh-CN">
 				<span id="id_125" class="sentence">
 					<a href="d202_6.smil#txt_49">
@@ -287,7 +287,7 @@
 			</p>
 			<p align="center" id="id_132" xml:lang="en-US">
 				<span class="imggroup" id="id_133">
-					<img id="rId146" alt="E:\AMIS\amis3_help_unrecorded\img\amis-basic-view.jpg" src="image6.jpeg" />				</span>			</p>
+					<img id="rId146" alt="E:\AMIS\amis3_help_unrecorded\img\amis-basic-view.jpg" src="./img/image6.jpeg" />				</span>			</p>
 			<p align="center" id="id_134" xml:lang="zh-CN">
 				<span id="id_135" class="sentence">
 					<a href="d202_6.smil#txt_53">
@@ -638,7 +638,7 @@
 				</ul>
 				<p align="center" id="id_290" xml:lang="en-US">
 					<span class="imggroup" id="id_291">
-						<img alt="E:\AMIS\amis3_help_unrecorded\img\amis-publication-summary-dialog.jpg" id="rId157" src="image7.jpeg" />					</span>				</p>
+						<img alt="E:\AMIS\amis3_help_unrecorded\img\amis-publication-summary-dialog.jpg" id="rId157" src="./img/image7.jpeg" />					</span>				</p>
 				<p align="center" id="id_292" xml:lang="zh-CN">
 					<span id="id_293" class="sentence">
 						<a href="d202_13.smil#txt_103">
@@ -805,7 +805,7 @@
 				</ul>
 				<p align="center" id="id_368" xml:lang="en-US">
 					<span class="imggroup" id="id_369">
-						<img alt="E:\AMIS\amis3_help_unrecorded\img\amis-preferences-dialog.jpg" src="image8.jpeg" id="rId168" />					</span>				</p>
+						<img alt="E:\AMIS\amis3_help_unrecorded\img\amis-preferences-dialog.jpg" src="./img/image8.jpeg" id="rId168" />					</span>				</p>
 				<p align="center" id="id_370" xml:lang="zh-CN">
 					<span id="id_371" class="sentence">
 						<a href="d202_16.smil#txt_126">
@@ -843,7 +843,7 @@
 			</ul>
 			<p align="center" id="id_389" xml:lang="en-US">
 				<span class="imggroup" id="id_390">
-					<img alt="E:\AMIS\amis3_help_unrecorded\img\amis-text-style-dialog.jpg" id="rId179" src="image9.jpeg" />				</span>			</p>
+					<img alt="E:\AMIS\amis3_help_unrecorded\img\amis-text-style-dialog.jpg" id="rId179" src="./img/image9.jpeg" />				</span>			</p>
 			<p align="center" id="id_391" xml:lang="zh-CN">
 				<span class="sentence" id="id_392">
 					<a href="d202_17.smil#txt_131">
