--- a/tamil/help/ncc.html
+++ b/tamil/help/ncc.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="windows-1252"?>
+<?xml version="1.0" encoding="utf8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -17,7 +17,7 @@
     <meta name="ncc:footnotes" content="0" />
     <meta name="ncc:prodNotes" content="0" />
     <meta name="ncc:totalTime" content="0:12:10" />
-    <meta http-equiv="Content-type" content="text/html; charset=windows-1252" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
 <h1 class="title" id="amis_0001"><a href="amis0001.smil#amis_0001">அமிச் பயனர் வழிவிளக்கி</a></h1>
