help book had extremely low volume and had to be adjusted

--- a/tamil/help/ncc.html
+++ b/tamil/help/ncc.html
@@ -4,6 +4,7 @@
 <head>
     <title>amis</title>
     <meta name="dc:title" content="amis" />
+    <meta name="dc:Identifier" content="amis3-tamil-help"/>
     <meta name="dc:format" content="Daisy 2.02" />
     <meta name="ncc:charset" content="windows-1252" />
     <meta name="ncc:generator" content="SigtunaDAR3 3.0.20" />
