final (?) updates for australian

--- a/australian/shortcuts/ncc.html
+++ b/australian/shortcuts/ncc.html
@@ -48,8 +48,7 @@
 				<a href="9.smil#t137">Help</a>
 			</h2>
 		<h1 id="nav10">
-			<a href="10.smil#t393">
-				Other (not in menu)</a>
+			<a href="10.smil#t393">Other (not in menu)</a>
 		</h1>
 		
 	</body>
