latest french files

--- a/french/shortcuts/amiskeys.html
+++ b/french/shortcuts/amiskeys.html
@@ -30,7 +30,7 @@
 					</li>
 					<li>
 						<span id="t6">Charger le CD:</span>
-						<span id="t8">Ctrl+c</span>
+						<span id="t8">Ctrl+C</span>
 					</li>
 					<li>
 						<span id="t10">Recherche dans les lecteurs...:</span>
@@ -79,8 +79,8 @@
 					<h2 id="t46">Lire (Alt+P)</h2>
 					<ul>
 					<li>
-						<span id="t55">échappe:</span>
-						<span id="t57">échappe</span>
+						<span id="t55">Échappe:</span>
+						<span id="t57">Échappe</span>
 					</li>
 					<li>
 						<span id="t59">plus rapide:</span>
@@ -88,7 +88,7 @@
 					</li>
 					<li>
 						<span id="t63">Plus lentement:</span>
-						<span id="t65">Ctrl+y</span>
+						<span id="t65">Ctrl+Y</span>
 					</li>
 					<li>
 						<span id="t67">Vitesse Normale:</span>
@@ -111,7 +111,7 @@
 					</li>
 					<li>
 						<span id="t86">Section Suivante:</span>
-						<span id="t88">Flèche-bas</span>
+						<span id="t88">Flèche-Bas</span>
 					</li>
 					<li>
 						<span id="t90">Afficher la profondeur de section:</span>
@@ -119,11 +119,11 @@
 					</li>
 					<li>
 						<span id="t94">Phrase Précédente:</span>
-						<span id="t96">Flèche-gauche</span>
+						<span id="t96">Flèche-Gauche</span>
 					</li>
 					<li>
 						<span id="t97">Phrase Suivante:</span>
-						<span id="t99">Flèche-droite</span>
+						<span id="t99">Flèche-Droite</span>
 					</li>
 					<li>
 						<span id="t100">Page Précédente:</span>
@@ -196,23 +196,23 @@
 				</li>
 				<li>
 					<span id="t394">Changer de livre audio:</span>
-					<span id="t433">Ctrl+Maj+c</span>
+					<span id="t433">Ctrl+Maj+C</span>
 				</li>
 				<li>
 					<span id="t396">Changer l'auto-vocalisation Audio:</span>
-					<span id="t398">Ctrl+maj+G</span>
+					<span id="t398">Ctrl+Maj+G</span>
 				</li>
 				<li>
 					<span id="t405">Réduire le volume d'auto-vocalisation:</span>
-					<span id="t407">Ctrl+Maj+Flèche-bas</span>
+					<span id="t407">Ctrl+Maj+Flèche-Bas</span>
 				</li>
 				<li>
 					<span id="t408">Augmenter le volume d'auto-vocalisation:</span>
-					<span id="t410">Ctrl+Maj+Flèche-haut</span>
+					<span id="t410">Ctrl+Maj+Flèche-Haut</span>
 				</li>
 				<li>
 					<span id="t411">Réduire le volume du livre:</span>
-					<span id="t413">Ctrl+Maj+Alt+Flèche-bas</span>
+					<span id="t413">Ctrl+Maj+Alt+Flèche-Bas</span>
 				</li>
 				<li>
 					<span id="t414">Augmenter le volume du livre:</span>
@@ -220,11 +220,11 @@
 				</li>
 				<li>
 					<span id="t440">Augmenter le volume TTS:</span>
-					<span id="t442">Ctrl+Maj+Flèche-droite</span>
+					<span id="t442">Ctrl+Maj+Flèche-Droite</span>
 				</li>
 				<li>
 					<span id="t443">Réduire le volume TTS:</span>
-					<span id="t445">Ctrl+Maj+Flèche-gauche</span>
+					<span id="t445">Ctrl+Maj+Flèche-Gauche</span>
 				</li>
 				<li>
 					<span id="t417">Réduire la profondeur de section:</span>
