help file cleanup

--- a/norwegian-bokmal/help/amis_brukerveiledning_bkm.html
+++ b/norwegian-bokmal/help/amis_brukerveiledning_bkm.html
@@ -192,7 +192,7 @@
                 Hva er AMIS?
             </h2>
 			<p style="LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 0" alt="amis.jpg" src="amis_brukerveiledning_bkm-filer/image001.jpg" width="126" height="126"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 0" alt="amis.jpg" src="image001.jpg" width="126" height="126"/></span>
 			</p>
 			<p style="LINE-HEIGHT: normal" class="MsoNormal">
 				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><span id="dol_1_2_ttux_0007" class="sentence">AMIS står for<i>A</i>daptive<i>M</i>ultimedia<i>I</i>nformation<i>S</i>ystem.</span></span>
@@ -204,13 +204,13 @@
 					<span id="dol_1_2_ttux_0011" class="sentence">AMIS er en gratis programvare med åpen kildekode.</span>
 					<span id="dol_1_2_ttux_0012" class="sentence">Programmet er oversatt til en rekke språk.</span>
 					<span id="dol_1_2_ttux_0013" class="sentence">Gå til</span></span>
-				<span id="dol_1_2_ttux_0014" class="sentence"><a href="http://amisproject.org"><span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%">http://amisproject.org</span></a></span><span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><span id="dol_1_2_ttux_0015" class="sentence">for å laste ned språkpakker til AMIS.</span></span>
+				<span id="dol_1_2_ttux_0014" class="sentence"><a href="http://amisproject.org"><span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%">http://amisproject.org</span></a></span><span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><span id="dol_1_2_ttux_0015" class="sentence"> for å laste ned språkpakker til AMIS.</span></span>
 			</p>
 			<h2 id="dol_1_3_ttux_0016">
                 Hva er DAISY?
             </h2>
 			<p style="LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 1" border="0" alt="daisy.jpg" src="amis_brukerveiledning_bkm-filer/image002.jpg" width="135" height="135"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 1" border="0" alt="daisy.jpg" src="image002.jpg" width="135" height="135"/></span>
 			</p>
 			<p style="LINE-HEIGHT: normal" class="MsoNormal">
 				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><span id="dol_1_3_ttux_0017" class="sentence">DAISY står for <i>D</i><i>igital Accessible Information System</i>.</span>
@@ -287,7 +287,7 @@
 				<span id="dol_1_6_ttux_0052" class="sentence">et navigasjonsvindu og et innholdsvindu.</span>
 			</p>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 2" border="0" alt="amis-default-view.jpg" src="amis_brukerveiledning_bkm-filer/image003.jpg" width="605" height="312"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 2" border="0" alt="amis-default-view.jpg" src="image003.jpg" width="605" height="312"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_6_ttux_0053" class="sentence">Skjermbilde fra AMIS</span>
@@ -297,7 +297,7 @@
 					<span id="dol_1_6_ttux_0055" class="sentence">og legg til bokmerke.</span></span>
 			</p>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 3" border="0" alt="amis-default-toolbar.jpg" src="amis_brukerveiledning_bkm-filer/image004.jpg" width="605" height="54"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 3" border="0" alt="amis-default-toolbar.jpg" src="image004.jpg" width="605" height="54"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_6_ttux_0056" class="sentence">Verktøylinje</span>
@@ -312,7 +312,7 @@
 					<span id="dol_1_6_ttux_0063" class="sentence">Hver type er representert i ei egen fane. </span></span>
 			</p>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 4" border="0" alt="amis-nav.jpg" src="amis_brukerveiledning_bkm-filer/image005.jpg" width="605" height="403"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 4" border="0" alt="amis-nav.jpg" src="image005.jpg" width="605" height="403"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_6_ttux_0064" class="sentence">Navigasjonsvinduet</span>
@@ -331,7 +331,7 @@
 				<span id="dol_1_6_ttux_0075" class="sentence">eller navigasjonsvindu.</span>
 			</p>
 			<p style="PAGE-BREAK-AFTER: avoid" class="MsoNormal">
-				<img id="Bilde 5" border="0" alt="amis-basic-view.jpg" src="amis_brukerveiledning_bkm-filer/image006.jpg" width="605" height="312"/>
+				<img id="Bilde 5" border="0" alt="amis-basic-view.jpg" src="image006.jpg" width="605" height="312"/>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_6_ttux_0076" class="sentence">AMIS i Enkel visningsmodus</span>
@@ -496,7 +496,7 @@
 				</li>
 			</ul>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 6" border="0" alt="amis-publication-summary-dialog.jpg" src="amis_brukerveiledning_bkm-filer/image007.jpg" width="605" height="414"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 6" border="0" alt="amis-publication-summary-dialog.jpg" src="image007.jpg" width="605" height="414"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_13_ttux_0130" class="sentence">Bokinformasjon</span>
@@ -579,7 +579,7 @@
 				</li>
 			</ul>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 7" border="0" alt="amis-preferences-dialog.jpg" src="amis_brukerveiledning_bkm-filer/image008.jpg" width="517" height="513"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 7" border="0" alt="amis-preferences-dialog.jpg" src="image008.jpg" width="517" height="513"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_16_ttux_0156" class="sentence">Alternativer</span>
@@ -604,7 +604,7 @@
                  
             </p>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 8" border="0" alt="amis-text-style-dialog.jpg" src="amis_brukerveiledning_bkm-filer/image009.jpg" width="348" height="352"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 8" border="0" alt="amis-text-style-dialog.jpg" src="image009.jpg" width="348" height="352"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_17_ttux_0163" class="sentence">Skriftstil menyen</span>
