help file corrections

--- a/norwegian-nynorsk/help/amis_brukarrettleiing_nynorsk_bilete.html
+++ b/norwegian-nynorsk/help/amis_brukarrettleiing_nynorsk_bilete.html
@@ -176,7 +176,7 @@
                 Kva er AMIS?
             </h2>
 			<p style="LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 0" alt="amis.jpg" src="amis_brukarrettleiing_nynorsk_bilete-filer/image001.jpg" width="126" height="126"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 0" alt="amis.jpg" src="image001.jpg" width="126" height="126"/></span>
 			</p>
 			<p style="LINE-HEIGHT: normal" class="MsoNormal">
 				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><span id="dol_1_2_buyr_0007" class="sentence">AMIS står for<i>A</i>daptive<i>M</i>ultimedia<i>I</i>nformation<i>S</i>ystem.</span></span>
@@ -196,7 +196,7 @@
                 Kva er DAISY?
             </h2>
 			<p style="LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 1" border="0" alt="daisy.jpg" src="amis_brukarrettleiing_nynorsk_bilete-filer/image002.jpg" width="135" height="135"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 1" border="0" alt="daisy.jpg" src="image002.jpg" width="135" height="135"/></span>
 			</p>
 			<p>
 				<span lang="NO-NYN" xml:lang="NO-NYN"><span id="dol_1_3_buyr_0015" class="sentence">DAISY står for <em>D</em>igital <em>A</em>ccessible <em>I</em>nformation <em>SY</em>stem.</span>
@@ -273,7 +273,7 @@
 					<span id="dol_1_6_buyr_0053" class="sentence">eit navigasjonsvindauge og eit innhaldsvindauge.</span></span>
 			</p>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 2" border="0" alt="amis-default-view.jpg" src="amis_brukarrettleiing_nynorsk_bilete-filer/image003.jpg" width="605" height="312"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 2" border="0" alt="amis-default-view.jpg" src="image003.jpg" width="605" height="312"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_6_buyr_0054" class="sentence">Skjermbilete i AMIS</span>
@@ -292,7 +292,7 @@
 					<span id="dol_1_6_buyr_0065" class="sentence">endre sidestil og legg til bokmerke.</span></span>
 			</p>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 3" border="0" alt="amis-default-toolbar.jpg" src="amis_brukarrettleiing_nynorsk_bilete-filer/image004.jpg" width="605" height="54"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 3" border="0" alt="amis-default-toolbar.jpg" src="image004.jpg" width="605" height="54"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_6_buyr_0066" class="sentence">Verktøylina</span>
@@ -307,7 +307,7 @@
 					<span id="dol_1_6_buyr_0073" class="sentence">Kvar type er representert i ei eiga fane.</span></span>
 			</p>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 4" border="0" alt="amis-nav.jpg" src="amis_brukarrettleiing_nynorsk_bilete-filer/image005.jpg" width="605" height="403"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 4" border="0" alt="amis-nav.jpg" src="image005.jpg" width="605" height="403"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_6_buyr_0074" class="sentence">Navigasjonsvindauget</span>
@@ -491,7 +491,7 @@
 				</li>
 			</ul>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 6" border="0" alt="amis-publication-summary-dialog.jpg" src="amis_brukarrettleiing_nynorsk_bilete-filer/image006.jpg" width="605" height="414"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 6" border="0" alt="amis-publication-summary-dialog.jpg" src="image006.jpg" width="605" height="414"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_13_buyr_0143" class="sentence">Bokinformasjon</span>
@@ -573,7 +573,7 @@
 				</li>
 			</ul>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 7" border="0" alt="amis-preferences-dialog.jpg" src="amis_brukarrettleiing_nynorsk_bilete-filer/image007.jpg" width="517" height="513"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 7" border="0" alt="amis-preferences-dialog.jpg" src="image007.jpg" width="517" height="513"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_16_buyr_0168" class="sentence">Alternativ</span>
@@ -597,7 +597,7 @@
                  
             </p>
 			<p style="PAGE-BREAK-AFTER: avoid; LINE-HEIGHT: normal; MARGIN-BOTTOM: 0pt" class="MsoNormal">
-				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 8" border="0" alt="amis-text-style-dialog.jpg" src="amis_brukarrettleiing_nynorsk_bilete-filer/image008.jpg" width="348" height="352"/></span>
+				<span style="FONT-FAMILY: 'Times New Roman','serif'; FONT-SIZE: 100%"><img id="Bilde 8" border="0" alt="amis-text-style-dialog.jpg" src="image008.jpg" width="348" height="352"/></span>
 			</p>
 			<p class="MsoCaption">
 				<span id="dol_1_17_buyr_0174" class="sentence">Skriftstil menyen</span>
