final fileset for trad. chinese

--- a/chinese_traditional/shortcuts/amiskeys.html
+++ b/chinese_traditional/shortcuts/amiskeys.html
@@ -103,7 +103,7 @@
 						<span id="t77">Ctrl+向下鍵</span>
 					</li>
 			</ul>
-					<h2 id="t81">Navigate (Alt+N)</h2>
+					<h2 id="t81">導航 (Alt+N)</h2>
 					<ul>
 					<li>
 						<span id="t82">上一章節:</span>
@@ -219,11 +219,11 @@
 					<span id="t416">Ctrl+Shift+Alt+向上鍵</span>
 				</li>
 				<li>
-					<span id="t440">Increase TTS volume:</span>
+					<span id="t440">增加TTS音量:</span>
 					<span id="t442">Ctrl+Shift+向右鍵</span>
 				</li>
 				<li>
-					<span id="t443">Decrease TTS volume:</span>
+					<span id="t443">降低TTS音量:</span>
 					<span id="t445">Ctrl+Shift+向左鍵</span>
 				</li>
 				<li>
