--- a/chinese_traditional/shortcuts/ncc.html
+++ b/chinese_traditional/shortcuts/ncc.html
@@ -36,7 +36,7 @@
 				<a href="5.smil#t46">播放</a>
 			</h2>
 			<h2 id="nav6">
-				<a href="6.smil#t81">Navigate</a>
+				<a href="6.smil#t81">導航</a>
 			</h2>
 			<h2 id="nav7">
 				<a href="7.smil#t115">書籤</a>
